--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -61,6 +61,11 @@
         border: none;
     }
 
+    .Header__upload--button:hover {
+        background-color: #0065AD;
+        color: white;
+    }
+
     .upload__section--icon {
         margin-left: 5px;
     }
