--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -56,6 +56,10 @@ textarea {
     color: $secondary_darkblack;
 }
 
+.inputredborder {
+    border: 0.125rem solid red;
+}
+
 @media screen and (min-device-width: 0px){
     body {
         margin: 8px 0px;
