--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,5 +1,6 @@
 @media screen and (min-device-width: 0px){
     .VideoPlayer__video {
+        margin-top: 24px;
         margin-bottom: 16px;
         position: relative;
     }
