--- a/src/pages/UploadVideo/UploadVideo.scss
+++ b/src/pages/UploadVideo/UploadVideo.scss
@@ -2,6 +2,7 @@
     .UploadVideoForm {
         padding-left: 16px;
         padding-right: 16px;
+        margin-top: 24px;
         margin-bottom: 24px;
     }
 
@@ -10,6 +11,8 @@
     }
 
     .UploadVideoForm__thumbnail {
+        display: flex;
+        flex-direction: column;
         margin-top: 24px;
         margin-bottom: 15px;
     }
@@ -71,7 +74,7 @@
     }
 
     .UploadVideoForm__publishbutton--icon {
-        margin-left: 2%;
+        margin-left: 5px;
         height: 24px;
         width: 24px;
     }
@@ -94,13 +97,92 @@
     .UploadVideoForm {
         padding-left: 36px;
         padding-right: 36px;
+        padding-top: 24px;
+        border-top: 1px solid #E1E1E1;
+    }
+
+    .UploadVideoForm__thumbnail {
+        border-top: 1px solid #E1E1E1;
+        padding-top: 24px;
+    }
+
+    .UploadVideoForm__thumbnail--img {
+        width: 50%;
+    }
+
+    .UploadVideoForm__videobutton {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        border-top: 1px solid #E1E1E1;
+        padding-top: 24px;
+    }
+
+    .UploadVideoForm__publishbutton {
+        width: 30%;
+        position: absolute;
+        right: 0px;
+    }
+
+    .UploadVideoForm__cancelbutton {
+        margin-top: 15px;
+        width: 30%;
+        position: absolute;
+        right: 30%;
     }
 
 }
 
 @media screen and (min-device-width: 1280px){
+    .UploadVideoForm__content {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-top: 24px;
+        border-top: 1px solid #E1E1E1;
+    }
+
     .UploadVideoForm {
-        padding-left: 36px;
-        padding-right: 36px;
+        padding-left: 63px;
+        padding-right: 63px;
+    }
+
+    .UploadVideoForm__thumbnail {
+        border-top: none;
+        margin-top: 0px;
+        padding-top: 24px;
+        margin-bottom: 15px;
+        width: 30%;
+    }
+
+    .UploadVideoForm__thumbnail--img {
+        width: 100%;
+    }
+
+    .UploadVideoForm__form {
+        width: 70%;
+        padding-top: 24px;
+        margin-bottom: 15px;
+    }
+
+    .UploadVideoForm__video--textarea {
+        padding-bottom: 70px;
+    }
+
+    .UploadVideoForm__publishbutton {
+        width: 15%;
+        position: absolute;
+        right: 0px;
+    }
+
+    .UploadVideoForm__publishbutton--placeholder {
+        padding-left: 22%;
+    }
+
+    .UploadVideoForm__cancelbutton {
+        margin-top: 15px;
+        width: 15%;
+        position: absolute;
+        right: 15%;
     }
 }
