Second draft of sprint2

--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -17,6 +17,7 @@
 
     .NextVideoList__VideoCardLink {
         text-decoration: none;
+        color: black;
     }
 
     .NextVideoList__VideoCardLink:visited {
