--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -231,6 +231,10 @@
         margin: 10px 0px;
     }
 
+    .VideoPlayer-subtitle__timestamp {
+        margin-left: 10px;
+    }
+
     .VideoPlayer-subtitle__viewssection {
         margin-left: 38%;
     }
