--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -1,6 +1,6 @@
 @media screen and (min-device-width: 0px){
     .Comment__container {
-        padding: 15px 16px;
+        padding: 0.9375rem 1rem;
         border-bottom: 0.0625rem solid #E1E1E1;
     }
 
@@ -13,14 +13,14 @@
         display: flex;
         flex-direction: row;
         gap: 1.25rem;
-        margin-top: 24px;
+        margin-top: 1.5rem;
     }
     
     .Comment__profileimg {
         object-position: 20% 80%;
         border-radius: 50%;
-        width: 36px;
-        height: 36px;
+        width: 2.25rem;
+        height: 2.25rem;
         object-fit: cover;
     }
 
@@ -42,11 +42,11 @@
     .Comment__button {
         display: flex;
         align-items: center;
-        border-radius: 4px;
+        border-radius: 0.25rem;
         width: 100%;
         height: 1.875rem;
         background-color: #0095FF;
-        padding: 20px 0px;
+        padding: 1.25rem 0rem;
         text-align: center;
         color: white;
         border: none;
@@ -59,7 +59,7 @@
 
 
     .Comment__button--icon {
-        margin-left: 5px;
+        margin-left: 0.3125rem;
 
     }
 
@@ -69,25 +69,25 @@
     }
 
     .CommentCard_list {
-        padding-left: 16px;
-        padding-right: 16px;
-        margin-bottom: 24px;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-bottom: 1.5rem;
     }
 }
 
 @media screen and (min-device-width: 768px){
     .Comment__container {
-        padding-top: 15px;
-        padding-bottom: 30px;
-        padding-left: 0px;
-        padding-right: 0px;
-        margin-left: 36px;
-        margin-right: 36px;
+        padding-top: 0.9375rem;
+        padding-bottom: 1.875rem;
+        padding-left: 0rem;
+        padding-right: 0rem;
+        margin-left: 2.25rem;
+        margin-right: 2.25rem;
     }
 
     .Comment__profileimg {
         position: relative;
-        top: 20px;
+        top: 1.25rem;
     }
 
     .Comment__form {
@@ -101,14 +101,14 @@
     .Comment__form--input {
         display: flex;
         flex-direction: row;
-        gap: 20px;
+        gap: 1.25rem;
     }
 
     .Comment__input--comment {
         width: 60%;
-        height: 25px;
-        padding-left: 12px;
-        padding-top: 12px;
+        height: 1.5625rem;
+        padding-left: 0.75rem;
+        padding-top: 0.75rem;
     }
 
     .Comment__button {
