--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -9,7 +9,7 @@
 
     .CommentCard__profileimg {
         position: relative;
-        top: 10px;
+        top: 0.625rem;
         border-radius: 50%;
         width: 2.25rem;
         height: 2.25rem;
@@ -25,7 +25,7 @@
     .CommentCard__content--title {
         display: flex;
         flex-direction: row;
-        padding: 10px 0px;
+        padding: 0.625rem 0rem;
     }
 
     .CommentCard__content--name {
@@ -40,17 +40,17 @@
 
 @media screen and (min-device-width: 768px){
     .CommentCard_list {
-        padding-left: 36px;
-        padding-right: 36px;
+        padding-left: 2.25rem;
+        padding-right: 2.25rem;
     }
 
     .CommentCard__container {
-        gap: 30px;
+        gap: 1.875rem;
     }
 
     .CommentCard__profileimg {
         position:relative;
-        top: 5px;
+        top: 0.3125rem;
     }
 
     .CommentCard__content {
