--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -2,8 +2,8 @@
     .VideoCard {
         display: flex;
         flex-direction: row;
-        margin: 10px 0px;
-        gap: 10px;
+        margin: 0.625rem 0rem;
+        gap: 0.625rem;
     }
 
     .VideoCard.CurrentPlayingVideo {
@@ -11,15 +11,15 @@
     }
 
     .VideoCard--img {
-        border-radius: 4px;
-        width: 120px;
-        height: 80px;
+        border-radius: 0.25rem;
+        width: 7.5rem;
+        height: 5rem;
         object-fit: cover;
     }
 
     .VideoCard--info {
-        width: 190px;
-        height: 80px;
+        width: 11.875rem;
+        height: 5rem;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -27,12 +27,12 @@
 
     .VideoCard__info--title {
         font-weight: bold;
-        margin-bottom: 5px;
+        margin-bottom: 0.3125rem;
     }
 
     .VideoCard__info--content {
         position: absolute;
-        bottom: 0px;
+        bottom: 0rem;
     }
     
 
