--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,13 +1,13 @@
 @media screen and (min-device-width: 0px){
     .VideoPlayer__video {
-        margin-top: 24px;
-        margin-bottom: 16px;
+        margin-top: 1.5rem;
+        margin-bottom: 1rem;
         position: relative;
     }
 
     .VideoPlayer__video--currentvideo {
         width: 100%;
-        height: 195px;
+        height: 12.1875rem;
         object-fit: cover;
     }
 
@@ -17,8 +17,8 @@
         align-items: center;
         justify-content: center;
         position: absolute;
-        top: 170px;
-        gap: 10px;
+        top: 10.625rem;
+        gap: 0.625rem;
         width: 90%;
         padding-left: 5%;
         padding-right: 5%;
@@ -29,24 +29,24 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        border-radius: 4px;
+        border-radius: 0.25rem;
         background-color: #000000;
         opacity: 50%;
-        padding: 2.5px 5px;
+        padding: 0.1563rem 0.3125rem;
         width: 5%;
-        height: 10px;
+        height: 0.625rem;
     }
 
     .VideoPlayer__section--middle {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        border-radius: 4px;
+        border-radius: 0.25rem;
         background-color: #000000;
         opacity: 50%;
-        padding: 2.5px 5px;
+        padding: 0.1563rem 0.3125rem;
         width: 70%;
-        height: 10px;
+        height: 0.625rem;
     }
 
     .VideoPlayer__section--right {
@@ -54,52 +54,52 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        border-radius: 4px;
+        border-radius: 0.25rem;
         background-color: #000000;
         opacity: 50%;
-        padding: 2.5px 8px;
+        padding: 0.1563rem 0.5rem;
         width: 10%;
-        height: 10px;
+        height: 0.625rem;
         display: flex;
         flex-direction: row;
-        gap: 5px;
+        gap: 0.3125rem;
     }
 
     .VideoPlayer-icon__play {
-        width: 10px;
-        height: 10px;
+        width: 0.625rem;
+        height: 0.625rem;
         z-index: 10;
     }
 
     .VideoPlayer-icon__progressbar {
         position: absolute;
-        top: 6px;
+        top: 0.375rem;
         right: 33%;
         background-color: #000000;
         width: 50%;
-        height: 3px;
-        border-radius: 4px;
+        height: 0.1875rem;
+        border-radius: 0.25rem;
         z-index: 10;
     }
 
     .VideoPlayer-icon__timeleft {
         position: absolute;
-        top: 4px;
+        top: 0.25rem;
         right: 23%;
         color: white;
-        font-size: 7px;
+        font-size: 0.4375rem;
     }
 
     .VideoPlayer-icon__fullscreen,
     .VideoPlayer-icon__volumeup {
-        width: 15px;
-        height: 15px;
+        width: 0.9375rem;
+        height: 0.9375rem;
     }
 
     .VideoPlayer__info {
-        padding-left: 16px;
-        padding-right: 16px;
-        margin-bottom: 24px;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-bottom: 1.5rem;
         display: flex;
         flex-direction: column;
     }
@@ -111,7 +111,7 @@
 
     .VideoPlayer-title__title {
         font-weight: bold;
-        padding: 0.9375rem 0px;
+        padding: 0.9375rem 0rem;
         border-bottom: 0.0625rem solid #E1E1E1;
     }
 
@@ -119,7 +119,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        padding: 5px 0px;
+        padding: 0.3125rem 0rem;
         border-bottom: 0.0625rem solid #E1E1E1;
 
     }
@@ -134,7 +134,7 @@
     .VideoPlayer-subtitle__viewssection, 
     .VideoPlayer-subtitle__likessection {
         width: 45%;
-        margin: 10px 0px;
+        margin: 0.625rem 0rem;
     }
 
     .VideoPlayer-subtitle__timestamp {
@@ -146,18 +146,18 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin-left: 30px;
+        margin-left: 1.875rem;
     }
 
     .VideoPlayer-subtitle__viewsicon,
     .VideoPlayer-subtitle__likesicon {
-        width: 22px;
-        height: 16px;
+        width: 1.375rem;
+        height: 1rem;
     }
 
     .VideoPlayer-subtitle__views, 
     .VideoPlayer-subtitle__likes {
-        padding-left: 10px;
+        padding-left: 0.625rem;
         color: #AFAFAF;
     }
 
@@ -166,7 +166,7 @@
     }
 
     .VideoPlayer-title__description {
-        margin-top: 16px;
+        margin-top: 1rem;
     }
 
 }
@@ -174,7 +174,7 @@
 @media screen and (min-device-width: 768px){
     .VideoPlayer__video {
         width: 100vw;
-        height: 400px;
+        height: 25rem;
         background-color: black;
         display: flex;
         align-items: center;
@@ -190,32 +190,32 @@
     .VideoPlayer__section--left,
     .VideoPlayer__section--middle,
     .VideoPlayer__section--right {
-        height: 15px;
+        height: 0.9375rem;
     }
 
     .VideoPlayer__video--icon {
-        top: 375px;
+        top: 23.4375rem;
     }
 
     .VideoPlayer-icon__progressbar {
-        top: 10px;
+        top: 0.625rem;
         width: 56%;
         right: 28%;
     }
 
     .VideoPlayer-icon__timeleft {
-        top: 7px;
+        top: 0.4375rem;
         right: 22%;
     }
 
     .VideoPlayer__info {
-        padding-left: 36px;
-        padding-right: 36px;
+        padding-left: 2.25rem;
+        padding-right: 2.25rem;
     }
 
     .VideoPlayer-title__title {
         border: none;
-        padding-bottom: 0px;
+        padding-bottom: 0rem;
     }
 
     .VideoPlayer-title__subtitle :nth-child(1) {order: 1;}
@@ -228,11 +228,11 @@
     .VideoPlayer-subtitle__viewssection, 
     .VideoPlayer-subtitle__likessection {
         width: auto;
-        margin: 10px 0px;
+        margin: 0.625rem 0rem;
     }
 
     .VideoPlayer-subtitle__timestamp {
-        margin-left: 10px;
+        margin-left: 0.625rem;
     }
 
     .VideoPlayer-subtitle__viewssection {
@@ -240,7 +240,7 @@
     }
 
     .VideoPlayer-subtitle__likessection {
-        margin-left: 20px;
+        margin-left: 1.25rem;
     }
 
 }
@@ -248,9 +248,9 @@
 @media screen and (min-device-width: 1280px){
     .VideoPlayer__video {
         width: 100vw;
-        height: 550px;
+        height: 34.375rem;
         background-color: black;
-        margin-bottom: 0px;
+        margin-bottom: 0rem;
     }
 
     .VideoPlayer__video--currentvideo {
@@ -261,7 +261,7 @@
 
     .VideoPlayer__video--icon {
         width: 70%;
-        top: 510px;
+        top: 31.875rem;
         padding-left: 15%;
         padding-right: 15%;
     }
@@ -278,8 +278,8 @@
     .VideoPlayer__detail {
         display: flex;
         flex-direction: row;
-        padding-left: 63px;
-        padding-right: 63px;
+        padding-left: 3.9375rem;
+        padding-right: 3.9375rem;
     }
 
     .VideoPlayer__detail--left {
@@ -288,6 +288,6 @@
     }
 
     .VideoPlayer__info {
-        padding-top: 36px;
+        padding-top: 2.25rem;
     }
 }
