--- a/src/pages/UploadVideo/UploadVideo.scss
+++ b/src/pages/UploadVideo/UploadVideo.scss
@@ -1,20 +1,20 @@
 @media screen and (min-device-width: 0px){
     .UploadVideoForm {
-        padding-left: 16px;
-        padding-right: 16px;
-        margin-top: 24px;
-        margin-bottom: 24px;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
     }
 
     .UploadVideoForm__title {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
 
     .UploadVideoForm__thumbnail {
         display: flex;
         flex-direction: column;
-        margin-top: 24px;
-        margin-bottom: 15px;
+        margin-top: 1.5rem;
+        margin-bottom: 0.9375rem;
     }
 
     .UploadVideoForm__thumbnail--title {
@@ -22,7 +22,7 @@
     }
 
     .UploadVideoForm__thumbnail--img {
-        border-radius: 4px;
+        border-radius: 0.25rem;
         width: 100%;
     }
 
@@ -31,7 +31,7 @@
     .UploadVideoForm__videodescription {
         display: flex;
         flex-direction: column;
-        margin-bottom: 16px;
+        margin-bottom: 1rem;
     }
 
     .UploadVideoForm__video--title {
@@ -39,9 +39,9 @@
     }
 
     .UploadVideoForm__video--input {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
+        padding-top: 0.625rem;
+        padding-bottom: 0.625rem;
+        padding-left: 0.625rem;
     }
 
     .UploadVideoForm__video--description {
@@ -49,23 +49,23 @@
     }
 
     .UploadVideoForm__video--textarea {
-        padding-top: 10px;
-        padding-bottom: 40px;
-        padding-left: 10px;
+        padding-top: 0.625rem;
+        padding-bottom: 2.5rem;
+        padding-left: 0.625rem;
     }
 
     .UploadVideoForm__video--publishbutton{
         display: flex;
         align-items: center;
-        border-radius: 4px;
+        border-radius: 0.25rem;
         width: 100%;
-        height: 0px;
+        height: 0rem;
         background-color: #0095FF;
-        padding: 20px 0px;
+        padding: 1.25rem 0rem;
         text-align: center;
         border: none;
         text-decoration: none;
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
     }
 
     .UploadVideoForm__video--publishbutton:hover {
@@ -73,37 +73,42 @@
         color: white;
     }
 
+    .UploadVideoForm__publishbutton,
+    .UploadVideoForm__cancelbutton {
+        text-decoration: none;
+    }
+
     .UploadVideoForm__publishbutton--icon {
-        margin-left: 5px;
-        height: 24px;
-        width: 24px;
+        margin-left: 0.3125rem;
+        height: 1.5rem;
+        width: 1.5rem;
     }
 
     .UploadVideoForm__publishbutton--placeholder {
         padding-left: 33%;
-        font-size: 15px;
+        font-size: 0.9375rem;
         color: white;
-        padding-top: 5px;
+        padding-top: 0.3125rem;
     }
 
     .UploadVideoForm__video--cancelbutton {
         margin-left: 42%;
-        font-size: 15px;
+        font-size: 0.9375rem;
         color: #0065AD;
     }
 }
 
 @media screen and (min-device-width: 768px){
     .UploadVideoForm {
-        padding-left: 36px;
-        padding-right: 36px;
-        padding-top: 24px;
-        border-top: 1px solid #E1E1E1;
+        padding-left: 2.25rem;
+        padding-right: 2.25rem;
+        padding-top: 1.5rem;
+        border-top: 0.0625rem solid #E1E1E1;
     }
 
     .UploadVideoForm__thumbnail {
-        border-top: 1px solid #E1E1E1;
-        padding-top: 24px;
+        border-top: 0.0625rem solid #E1E1E1;
+        padding-top: 1.5rem;
     }
 
     .UploadVideoForm__thumbnail--img {
@@ -114,18 +119,18 @@
         display: flex;
         flex-direction: row;
         position: relative;
-        border-top: 1px solid #E1E1E1;
-        padding-top: 24px;
+        border-top: 0.0625rem solid #E1E1E1;
+        padding-top: 1.5rem;
     }
 
     .UploadVideoForm__publishbutton {
         width: 30%;
         position: absolute;
-        right: 0px;
+        right: 0rem;
     }
 
     .UploadVideoForm__cancelbutton {
-        margin-top: 15px;
+        margin-top: 0.9375rem;
         width: 30%;
         position: absolute;
         right: 30%;
@@ -137,21 +142,21 @@
     .UploadVideoForm__content {
         display: flex;
         flex-direction: row;
-        gap: 20px;
-        margin-top: 24px;
-        border-top: 1px solid #E1E1E1;
+        gap: 1.25rem;
+        margin-top: 1.5rem;
+        border-top: 0.0625rem solid #E1E1E1;
     }
 
     .UploadVideoForm {
-        padding-left: 63px;
-        padding-right: 63px;
+        padding-left: 3.9375rem;
+        padding-right: 3.9375rem;
     }
 
     .UploadVideoForm__thumbnail {
         border-top: none;
-        margin-top: 0px;
-        padding-top: 24px;
-        margin-bottom: 15px;
+        margin-top: 0rem;
+        padding-top: 1.5rem;
+        margin-bottom: 0.9375rem;
         width: 30%;
     }
 
@@ -161,18 +166,18 @@
 
     .UploadVideoForm__form {
         width: 70%;
-        padding-top: 24px;
-        margin-bottom: 15px;
+        padding-top: 1.5rem;
+        margin-bottom: 0.9375rem;
     }
 
     .UploadVideoForm__video--textarea {
-        padding-bottom: 70px;
+        padding-bottom: 4.375rem;
     }
 
     .UploadVideoForm__publishbutton {
         width: 15%;
         position: absolute;
-        right: 0px;
+        right: 0rem;
     }
 
     .UploadVideoForm__publishbutton--placeholder {
@@ -180,7 +185,7 @@
     }
 
     .UploadVideoForm__cancelbutton {
-        margin-top: 15px;
+        margin-top: 0.9375rem;
         width: 15%;
         position: absolute;
         right: 15%;
