--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -64,7 +64,7 @@ textarea::placeholder {
 
 @media screen and (min-device-width: 0px){
     body {
-        margin: 8px 0px;
+        margin: 0.5rem 0rem;
     }
 
     /* Font Size */
@@ -107,7 +107,7 @@ textarea::placeholder {
 
 @media screen and (min-device-width: 768px){
     body {
-        margin: 16px 0px;
+        margin: 1rem 0rem;
     }
 
     /* Font Size */
