--- a/src/pages/UploadVideo/UploadVideo.scss
+++ b/src/pages/UploadVideo/UploadVideo.scss
@@ -1,4 +1,8 @@
 @media screen and (min-device-width: 0px){
+    .inputredborder {
+        border: 0.125rem solid red;
+    }
+    
     .UploadVideoForm {
         padding-left: 1rem;
         padding-right: 1rem;
