--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -1,4 +1,8 @@
 @media screen and (min-device-width: 0px){
+    .inputredborder {
+        border: 0.125rem solid red;
+    }
+
     .Comment__container {
         padding: 0.9375rem 1rem;
         border-bottom: 0.0625rem solid #E1E1E1;
