--- a/src/pages/UploadVideo/UploadVideo.scss
+++ b/src/pages/UploadVideo/UploadVideo.scss
@@ -28,6 +28,8 @@
     .UploadVideoForm__thumbnail--img {
         border-radius: 0.25rem;
         width: 100%;
+        object-fit: cover;
+        height: 10rem;
     }
 
 
@@ -116,7 +118,8 @@
     }
 
     .UploadVideoForm__thumbnail--img {
-        width: 50%;
+        width: 40%;
+        height: 10rem;
     }
 
     .UploadVideoForm__videobutton {
@@ -166,6 +169,7 @@
 
     .UploadVideoForm__thumbnail--img {
         width: 100%;
+        height: 13rem;
     }
 
     .UploadVideoForm__form {
